2007-02-28 Yen-Ju Chen <yjchenx at gmail>

	* Use NSWorkspace to track GNUstep applications
          and Azalea to track XWindow windows.
          Hope to make it more simple and stable.
	* Clean up and recover workspace switcher.

2006-12-17 Yen-Ju Chen <yjchenx at gmail>

	* Initial support for keeping application in dock.
	* Avoid crash if command is not found.
	* Fix firefox because it is under special directory.
	* Put etoile_system, EtoileMenuServer and AZBackground in blacklist.
	* Make sure icon is properly retained.
	* Avoid AZDock window through blacklist.
	* Fix bug of launching GNUstep application. 
          [NSWorkspace launchApplication:] does not always work.

2006-12-16 Yen-Ju Chen <yjchenx at gmail>

	* Avoid gnustep windows other than regular window, main menu and doc.
	* AZDock: Remove as much memory as possible.

2006-11-02 Yen-Ju Chen <yjchenx at gmail>

	* Link to CollectionKit.

2006-10-21 Yen-Ju Chen <yjchenx at gmail>

	* Split AZDockApp into AZXWindowApp and AZGNUstepApp.

2006-10-20 Yen-Ju Chen <yjchenx at gmail>

	* Properly handle workspaces if it starts before window manager.
	* Fix adding directories but not .app into recent applications.

2006-10-18 Yen-Ju Chen <yjchenx at gmail>

	* Move workspace switcher into its own submenu.
	* Implement recent applications.

2006-09-24 Yen-Ju Chen <yjchenx at gmail>

	* Terminate GNUstep application through NSConnection.

2006-09-23 Yen-Ju Chen <yjchenx at gmail>

	* Start to implement show and quit in contextual menu.
	* Obtain command.

2006-09-19 Yen-Ju Chen <yjchenx at gmail>

	* Works better.

2006-09-10 Yen-Ju Chen <yjchenx at gmail>

	* AZWorkspaceView: 
	make it a subclass of AZDockView.
	launch GSWorkspaceApplication or xterm with left click.
	contextual menu as workspace switcher.
	* AZDock:
	centralize atoms declaration.
	check change of workspace.

2006-09-05 Yen-Ju Chen <yjchenx at gmail>

	* Make icon diplay even when application icon is suppressed.