@@ -9,6 +9,13 @@ typedef enum _AZDockType {
   AZDockFile
 } AZDockType;
 
+typedef enum _AZDockAppState {
+  AZDockAppNotRunning,
+  AZDockAppLaunching,
+  AZDockAppRunning,
+} AZDockAppState;
+
+
 /* Post when this dock application terminates and should be remove from dock.
  * Object is terminated application. */
 extern NSString *const AZApplicationDidTerminateNotification;
@@ -22,7 +29,7 @@ extern NSString *const AZApplicationDidTerminateNotification;
 
   NSString *command; /* Command to launch this application */
   BOOL keepInDock;
-  BOOL isRunning;
+  AZDockAppState state;
 }
 
 - (AZDockType) type;
@@ -37,7 +44,7 @@ extern NSString *const AZApplicationDidTerminateNotification;
 - (void) setKeptInDock: (BOOL) b;
 - (BOOL) isKeptInDock;
 
-- (void) setRunning: (BOOL) b;
-- (BOOL) isRunning;
+- (void) setState: (AZDockAppState) b;
+- (AZDockAppState) state;
 
 @end
